// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`empty.ts - {"bracketSpacing":false} format 1`] = `
====================================options=====================================
bracketSpacing: false
parsers: ["typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
a = [];
a = [/*c*/];
a = [//c
];
a= [
//c
];
a = [/* 1 */ /* 2 */];
a = [
/*
1
2
*/
];
type A11 = [];
type A12 = [/*c*/];
type A13 = [//c
];
type A14 = [
//c
];
type A15 = [/* 1 */ /* 2 */];
type A16 = [
/*
1
2
*/
];

o = {};
o = {/*c*/};
type O21 = {};
type O22 = {/*c*/};
type O23 = {//c
};
type O24 = {
//c
};
type O25 = {/* 1 */ /* 2 */};
type O26 = {
/*
1
2
*/
};
interface I21 {}
interface I22 {/*c*/}

=====================================output=====================================
a = [];
a = [/*c*/];
a = [
  //c
];
a = [
  //c
];
a = [
  /* 1 */
  /* 2 */
];
a = [
  /*
1
2
*/
];
type A11 = [];
type A12 = [/*c*/];
type A13 = [
  //c
];
type A14 = [
  //c
];
type A15 = [
  /* 1 */
  /* 2 */
];
type A16 = [
  /*
1
2
*/
];

o = {};
o = {/*c*/};
type O21 = {};
type O22 = {/*c*/};
type O23 = {
  //c
};
type O24 = {
  //c
};
type O25 = {
  /* 1 */
  /* 2 */
};
type O26 = {
  /*
1
2
*/
};
interface I21 {}
interface I22 {
  /*c*/
}

================================================================================
`;

exports[`empty.ts - {"bracketSpacing":true} format 1`] = `
====================================options=====================================
bracketSpacing: true
parsers: ["typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
a = [];
a = [/*c*/];
a = [//c
];
a= [
//c
];
a = [/* 1 */ /* 2 */];
a = [
/*
1
2
*/
];
type A11 = [];
type A12 = [/*c*/];
type A13 = [//c
];
type A14 = [
//c
];
type A15 = [/* 1 */ /* 2 */];
type A16 = [
/*
1
2
*/
];

o = {};
o = {/*c*/};
type O21 = {};
type O22 = {/*c*/};
type O23 = {//c
};
type O24 = {
//c
};
type O25 = {/* 1 */ /* 2 */};
type O26 = {
/*
1
2
*/
};
interface I21 {}
interface I22 {/*c*/}

=====================================output=====================================
a = [];
a = [/*c*/];
a = [
  //c
];
a = [
  //c
];
a = [
  /* 1 */
  /* 2 */
];
a = [
  /*
1
2
*/
];
type A11 = [];
type A12 = [/*c*/];
type A13 = [
  //c
];
type A14 = [
  //c
];
type A15 = [
  /* 1 */
  /* 2 */
];
type A16 = [
  /*
1
2
*/
];

o = {};
o = {/*c*/};
type O21 = {};
type O22 = {/*c*/};
type O23 = {
  //c
};
type O24 = {
  //c
};
type O25 = {
  /* 1 */
  /* 2 */
};
type O26 = {
  /*
1
2
*/
};
interface I21 {}
interface I22 {
  /*c*/
}

================================================================================
`;
